# bevy-tasks

./: .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  README.md
apps/flutter/: .gitignore  README.md  flutter_rust_bridge.yaml  pubspec.yaml
apps/flutter/android/app/: build.gradle.kts
apps/flutter/android/app/src/main/: AndroidManifest.xml
apps/flutter/android/app/src/main/kotlin/com/onyx/onyx/: MainActivity.kt
apps/flutter/lib/: main.dart  theme.dart
apps/flutter/lib/providers/: app_provider.dart
apps/flutter/lib/screens/: settings_screen.dart  setup_screen.dart  tasks_screen.dart
apps/flutter/lib/src/: theme.dart
apps/flutter/lib/src/rust/: api.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
apps/flutter/lib/src/screens/: settings_screen.dart  setup_screen.dart  tasks_screen.dart
apps/flutter/lib/src/state/: app_state.dart
apps/flutter/lib/src/widgets/: custom_title_bar.dart  date_time_picker.dart  new_task_input.dart  task_detail_view.dart  task_item.dart
apps/flutter/lib/widgets/: list_picker_sheet.dart  new_task_bar.dart  task_item.dart
apps/flutter/linux/: CMakeLists.txt
apps/flutter/linux/runner/: my_application.cc
apps/flutter/rust/: Cargo.toml
apps/flutter/rust/src/: api.rs  frb_generated.rs
apps/flutter/test/: widget_test.dart
apps/flutter/windows/: CMakeLists.txt
apps/flutter/windows/runner/: Runner.rc  main.cpp
apps/tauri/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/tauri/src/: App.svelte  app.css
apps/tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri/src-tauri/capabilities/: default.json
apps/tauri/src-tauri/icons/: icon.icns
apps/tauri/src-tauri/src/: lib.rs  main.rs
apps/tauri/src/lib/: types.ts
apps/tauri/src/lib/components/: BottomSheet.svelte  ConfirmDialog.svelte  DateTimePicker.svelte  NewTaskInput.svelte  TaskDetailView.svelte  TaskItem.svelte
apps/tauri/src/lib/screens/: SettingsScreen.svelte  SetupScreen.svelte  TasksScreen.svelte
apps/tauri/src/lib/stores/: app.svelte.ts
crates/bevy-tasks-cli/: Cargo.toml
crates/bevy-tasks-cli/src/: main.rs  output.rs
crates/bevy-tasks-cli/src/commands/: group.rs  init.rs  list.rs  mod.rs  sync.rs  task.rs  workspace.rs
crates/bevy-tasks-core/: Cargo.toml
crates/bevy-tasks-core/src/: config.rs  credentials.rs  error.rs  lib.rs  models.rs  repository.rs  storage.rs  sync.rs  webdav.rs
crates/bevy-tasks-gui/: Cargo.toml
crates/bevy-tasks-gui/src/: lib.rs  main.rs
crates/onyx-cli/: Cargo.toml
crates/onyx-cli/src/: main.rs  output.rs
crates/onyx-cli/src/commands/: group.rs  init.rs  list.rs  mod.rs  sync.rs  task.rs  workspace.rs
crates/onyx-core/: Cargo.toml
crates/onyx-core/src/: config.rs  models.rs  repository.rs  storage.rs  sync.rs  webdav.rs
docs/: API.md  DEVELOPMENT.md
src/: main.rs
