[package]
name = "bevy-tasks-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = "1.0"
serde_yaml = "0.9"        # YAML frontmatter
pulldown-cmark = "0.12"   # Markdown parsing
uuid = { workspace = true }
chrono = { workspace = true }
directories = "5.0"
anyhow = { workspace = true }
thiserror = "2.0"
tokio = { workspace = true }
reqwest_dav = "0.2"       # WebDAV client
keyring = "3.0"           # Secure credential storage
url = "2.5"               # URL parsing for WebDAV

[dev-dependencies]
tempfile = "3.0"
