[package]
name = "bevy-tasks-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = "1.0"
serde_yaml = "0.9"
uuid = { workspace = true }
chrono = { workspace = true }
directories = "5.0"
reqwest = { workspace = true }
sha2 = { workspace = true }
quick-xml = { workspace = true }
tokio = { workspace = true }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

[dev-dependencies]
tempfile = "3.0"
wiremock = "0.6"
tokio = { workspace = true }
