[package]
name = "onyx-cli"
version = "0.1.0"
edition = "2021"
description = "CLI frontend for Onyx, a local-first task management app"
license = "GPL-3.0-or-later"
repository = "https://github.com/SteelDynamite/onyx"

[[bin]]
name = "onyx"
path = "src/main.rs"

[dependencies]
onyx-core = { path = "../onyx-core" }
clap = { version = "4.5", features = ["derive", "env"] }
colored = "2.0"
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
fs_extra = "1.3"
tokio = { workspace = true }
rpassword = "5.0"
