[package]
name = "bevy-tasks-tauri"
version = "0.1.0"
edition = "2021"

[lib]
name = "bevy_tasks_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bevy-tasks-core = { path = "../../../crates/bevy-tasks-core" }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }

[package.metadata.tauri]

[features]
custom-protocol = ["tauri/custom-protocol"]
