[package]
name = "onyx-tauri"
version = "0.1.0"
edition = "2021"
description = "Tauri v2 desktop GUI for Onyx"
license = "GPL-3.0-or-later"
repository = "https://github.com/SteelDynamite/onyx"

[lib]
name = "onyx_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
onyx-core = { path = "../../../crates/onyx-core" }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
notify = "7"
notify-debouncer-mini = "0.5"

[package.metadata.tauri]

[features]
custom-protocol = ["tauri/custom-protocol"]
