[package]
name = "onyx-tauri"
version = "0.1.0"
edition = "2021"
description = "Tauri v2 desktop GUI for Onyx"
license = "GPL-3.0-or-later"
repository = "https://github.com/SteelDynamite/onyx"

[lib]
name = "onyx_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
onyx-core = { path = "../../../crates/onyx-core", default-features = false }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
notify = { version = "7", optional = true }
notify-debouncer-mini = { version = "0.5", optional = true }

[package.metadata.tauri]

[features]
default = ["desktop"]
desktop = ["notify", "notify-debouncer-mini", "onyx-core/keyring-storage"]
custom-protocol = ["tauri/custom-protocol"]
